--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "@react-native-community/push-notification-ios": "^1.11.0",
     "@react-navigation/bottom-tabs": "^7.0.0",
     "@react-navigation/native": "^7.0.0",
+    "@reactvision/react-viro": "^2.41.6",
+    "@viro-community/react-viro": "^2.41.1",
     "expo": "~52.0.7",
     "expo-av": "^15.0.1",
     "expo-blur": "~14.0.1",
@@ -44,7 +46,8 @@
     "react-native-screens": "~4.0.0",
     "react-native-url-polyfill": "^2.0.0",
     "react-native-web": "~0.19.13",
-    "react-native-webview": "13.12.2"
+    "react-native-webview": "13.12.2",
+    "react-viro": "^2.17.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
