--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "@expo/vector-icons": "^14.0.2",
     "@react-native-community/push-notification-ios": "^1.11.0",
+    "@react-native-picker/picker": "^2.11.0",
     "@react-navigation/bottom-tabs": "^7.0.0",
     "@react-navigation/native": "^7.0.0",
     "@reactvision/react-viro": "^2.41.6",
@@ -41,10 +42,12 @@
     "react-native": "0.76.2",
     "react-native-appwrite": "^0.5.0",
     "react-native-gesture-handler": "~2.20.2",
+    "react-native-masked-view": "^0.2.0",
     "react-native-reanimated": "~3.16.1",
-    "react-native-safe-area-context": "4.12.0",
+    "react-native-safe-area-context": "^4.12.0",
     "react-native-screens": "~4.0.0",
     "react-native-url-polyfill": "^2.0.0",
+    "react-native-vector-icons": "^10.2.0",
     "react-native-web": "~0.19.13",
     "react-native-webview": "13.12.2",
     "react-viro": "^2.17.0"
