--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@react-native-picker/picker": "^2.11.0",
     "@react-navigation/bottom-tabs": "^7.0.0",
     "@react-navigation/native": "^7.0.0",
+    "@react-navigation/stack": "^7.1.1",
     "@reactvision/react-viro": "^2.41.6",
     "@viro-community/react-viro": "^2.41.1",
     "expo": "~52.0.7",
@@ -49,6 +50,7 @@
     "react-native-screens": "~4.0.0",
     "react-native-url-polyfill": "^2.0.0",
     "react-native-vector-icons": "^10.2.0",
+    "react-native-video": "^6.10.0",
     "react-native-web": "~0.19.13",
     "react-native-webview": "13.12.2",
     "react-viro": "^2.17.0"
