--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.2",
+    "@react-native-async-storage/async-storage": "^2.1.1",
     "@react-native-community/push-notification-ios": "^1.11.0",
     "@react-native-picker/picker": "^2.11.0",
     "@react-navigation/bottom-tabs": "^7.0.0",
@@ -45,9 +46,11 @@
     "react-native-gesture-handler": "~2.20.2",
     "react-native-get-random-values": "^1.11.0",
     "react-native-masked-view": "^0.2.0",
+    "react-native-permissions": "^5.2.5",
     "react-native-reanimated": "~3.16.1",
-    "react-native-safe-area-context": "^4.14.1",
+    "react-native-safe-area-context": "^5.2.0",
     "react-native-screens": "~4.0.0",
+    "react-native-toast-message": "^2.2.1",
     "react-native-url-polyfill": "^2.0.0",
     "react-native-vector-icons": "^10.2.0",
     "react-native-video": "^6.10.0",
