--- a/package.json
+++ b/package.json
@@ -54,11 +54,9 @@
     "react-native-url-polyfill": "^2.0.0",
     "react-native-vector-icons": "^10.2.0",
     "react-native-video": "^6.10.0",
-    "react-native-vision-camera": "^4.6.3",
     "react-native-web": "~0.19.13",
     "react-native-webview": "13.12.2",
-    "react-viro": "^2.17.0",
-    "vision-camera-code-scanner": "^0.2.0"
+    "react-viro": "^2.17.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
